Commit includes addition of functionality in Web SDK for rendering vertical-split FAQ templates in both chat view & full-screen view.

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -10668,6 +10668,23 @@ input:checked + .custom-slider:before {
     height: auto;
     border-radius: 4px;
 }
+.image-content-space-vertical {
+    padding: 0 !important;
+    margin: 0 !important;
+    /* height: 200px; */
+    width: 50%;
+    float: left;
+}
+.multimedia-image-vertical {
+    width: 90%;
+    /* height: 95%; */
+    border-radius: 4px;
+}
+.vertical-split-content-inner{
+    float: right;
+    width: 50%;
+    margin: 0px 0 0 0 !important;
+}
 
 .kore-list-template-div{
     list-style: none;
