removed mergr conflict

--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1623,7 +1623,6 @@ ngx-simplebar {
         } 
     }
 }
-<<<<<<< HEAD
 .custom_date_picker_sec{
     margin-right: 10px;
     .md-drppicker {
@@ -1928,7 +1927,7 @@ ngx-simplebar {
         border-radius: 6px;
         max-width: 100%;
     }
-=======
+}
 
 nouislider{
     margin: 33px 0 !important;
@@ -1968,5 +1967,4 @@ nouislider{
         }
     }
 
->>>>>>> Search_UI/Features/Expirements
 }
