--- a/findly-builder/src/app/components/status-docker/status-docker.component.html
+++ b/findly-builder/src/app/components/status-docker/status-docker.component.html
@@ -1,16 +1,24 @@
 <div class="statusDockerBody">
     <div class="header text-right">
-        <div class="clear_icon">{{'clear_all' | translate}}</div>
+        <div class="clear_icon anchor" (click)="clearAllRecords()">{{'clear_all' | translate}}</div>
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body docker">
 		<div class="docker-list" *ngIf="!statusDockerLoading">
-			<div class="row mb-2" *ngFor="let task of dockersList; let index = index">
-                <div class="text col-10">
-                    <div class="heading">Basic Details</div>
-                    <div class="desc">Type description</div>
+			<div class="row mb-2 mr-0" *ngFor="let task of dockersList; let index = index">
+                <div class="text col-8">
+                    <div class="heading">{{task.message ? task.message : 'Task Name'}}</div>
+                    <div class="desc" *ngIf="getStatusView(task.status)">{{task.status | titlecase}}</div>
+                    <div class="desc" *ngIf="!getStatusView(task.status)">{{getStatusView(task.status, 'other')}}</div>
                 </div>
-                <div class="col-2">
-                    icons
+                <div class="col-4 d-inline text-right">
+                    <img src="assets/images/status-docker/error.png" class="ml-2 anchor" *ngIf="task.status === 'FAILURE'">
+                    <img src="assets/images/status-docker/return.png" class="ml-2 anchor" *ngIf="task.status === 'HALTED'">
+                    <img src="assets/images/status-docker/download.png" class="ml-2 anchor" *ngIf="(task.status === 'SUCCESS') && (task.jobType === 'faq')">
+                    <img src="assets/images/status-docker/Vector-success.png" class="ml-2" *ngIf="(task.status === 'SUCCESS') && (task.jobType !== 'faq')">
+                    <img src="assets/images/status-docker/Vector-redirect.png" class="ml-2 anchor" (click)="naviateToContent(task)" *ngIf="(task.status == 'IN_PROGRESS') && (task.extractionSourceId && (task.jobType == 'webdomain'))">
+                    <img src="assets/icons/ringLoading.svg" class="ml-2 inProgress" *ngIf="task.status == 'IN_PROGRESS'" placement="top" container='body'>
+                    <span *ngIf="(task.status == 'IN_PROGRESS') && (task.percentageComplete > 0)" class="run-percentageDone">{{task.percentageComplete}}</span>
+                    <img src="assets/images/status-docker/cancel.png" class="ml-2 anchor" (click)="removeRecord(task)" *ngIf="(task.status !== 'IN_PROGRESS')">
                 </div>
 			</div>
 		</div>
