--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -286,5 +286,5 @@
 </kr-modal>
 
 <div class="statusDockerContent p-3" *ngIf="showStatusDocker">
-	<app-status-docker [dockersList]="dockersList" [statusDockerLoading]="statusDockerLoading"></app-status-docker>
+	<app-status-docker [statusDockerLoading]="statusDockerLoading"></app-status-docker>
 </div>
