--- a/findly-builder/src/app/components/status-docker/status-docker.component.scss
+++ b/findly-builder/src/app/components/status-docker/status-docker.component.scss
@@ -1,10 +1,51 @@
 .statusDockerBody{
-    .heading{
+    .clear_icon{
+        padding: 15px 17px;
+        color: #9AA0A6;
+        font-weight: normal;
         font-size: 12px;
-        font-weight: 600;
+        line-height: 15px;
+        margin-bottom: 10px;
     }
-    .perfect-scroll-modal-body.docker{
-        height: 274px !important;
+    .docker-list{
+        padding: 0 17px;
+        padding-bottom: 10px;
+        .row-content{
+            margin-bottom: 12px;
+            .heading{
+                color: #202124;
+                font-weight: normal;
+                font-size: 12px;
+                line-height: 15px;
+                margin-bottom: 6px;
+            }
+            .desc{
+                color: #9AA0A6;
+                font-weight: normal;
+                font-size: 10px;
+                line-height: 12px;
+                .tooltip-data{
+                    cursor: pointer;
+                    margin-left: 4px;
+                }
+            }
+            .img-block{
+                margin-right: 24px;
+                img{
+                    cursor: pointer;
+                }
+            }
+            .status-blcok{
+                img{
+                    cursor: pointer;
+                }
+            }
+        }
+    }    
+    .perfect-scroll-modal-body{
+        &.docker{
+            height: 215px;
+        }        
     }
     .inProgress{
         width: 20px;
