--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1905,3 +1905,19 @@ ngx-simplebar {
         }
     }
 }
+.date-tooltip{
+    .arrow{
+        &::before{
+            border-right-color: #fff;
+        }
+    }
+    .tooltip-inner{
+        background: #FFFFFF;
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+        color: #202124;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 15px;
+        padding: 5px 10px;
+    }
+}
