--- a/findly-builder/src/app/components/status-docker/status-docker.component.html
+++ b/findly-builder/src/app/components/status-docker/status-docker.component.html
@@ -34,7 +34,7 @@
     </perfect-scrollbar>
 </div>
 
-
+<!-- Static Demo HTML -->
 <div class="statusDockerBody d-none">
     <div class="clear_icon text-right">{{'clear_all' | translate}}</div>
     <perfect-scrollbar class="perfect-scroll-modal-body docker">
