--- a/findly-builder/src/app/components/status-docker/status-docker.component.scss
+++ b/findly-builder/src/app/components/status-docker/status-docker.component.scss
@@ -56,8 +56,10 @@
     }
     .run-percentageDone {
         position: absolute;
-        left: 69px;
-        top: 2px;
+        // left: 69px;
+        // top: 2px;
+        left: 55px;
+        top: 14px;
         font-size: 10px;
         color: #a6bdda;
     }
