Pointer event for ClearAll

--- a/findly-builder/src/app/components/status-docker/status-docker.component.scss
+++ b/findly-builder/src/app/components/status-docker/status-docker.component.scss
@@ -6,6 +6,7 @@
         font-size: 12px;
         line-height: 15px;
         margin-bottom: 10px;
+        cursor: pointer;
     }
     .docker-list{
         padding: 0 17px;
