FLY-852 and app overview channels in progress

--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -145,64 +145,64 @@
          <div class="cards_sec_main row m-0"  *ngIf="channelExist">
           <div class="pad-div">
               <div class="card_data">
-                <div class="img-block center"><img src="assets/icons/overview/slack.svg"></div>
-                <div class="c-title text-truncate">Slack </div>
+                <div class="img-block center"><img src="assets/icons/web-mobile-client.png"></div>
+                <div class="c-title text-truncate">{{channel.name}} </div>
               </div>
           </div>
-          <div class="pad-div">
+          <!-- <div class="pad-div">
             <div class="card_data">
               <div class="img-block"><img src="assets/icons/overview/cisco.svg"></div>
               <div class="c-title text-truncate">Cisco Jabber</div>
             </div>
-          </div>
-          <div class="pad-div">
+          </div> -->
+          <!-- <div class="pad-div">
             <div class="card_data">
               <div class="img-block"><img src="assets/icons/overview/whatsapp.svg"></div>
               <div class="c-title text-truncate">Whatsapp Bussiness</div>
             </div>
-          </div>  
-          <div class="pad-div">
+          </div>   -->
+          <!-- <div class="pad-div">
             <div class="card_data">
               <div class="img-block"><img src="assets/icons/overview/ubuntu.svg"></div>
               <div class="c-title text-truncate">Unblu</div>
             </div>
-          </div> 
-          <div class="pad-div">
+          </div>  -->
+          <!-- <div class="pad-div">
             <div class="card_data">
               <div class="img-block"><img src="assets/icons/overview/cisco.svg"></div>
               <div class="c-title text-truncate">Cisco Jabber  </div>
             </div>
-          </div> 
-          <div class="pad-div">
+          </div>  -->
+          <!-- <div class="pad-div">
             <div class="card_data">
               <div class="img-block"><img src="assets/icons/overview/ubuntu.svg"></div>
               <div class="c-title text-truncate">Unblu</div>
             </div>
-          </div> 
-          <div class="pad-div">
+          </div>  -->
+          <!-- <div class="pad-div">
             <div class="card_data">
               <div class="img-block"><img src="assets/icons/overview/liveperson.svg"></div>
               <div class="c-title text-truncate">LivePerson</div>
             </div>
-          </div> 
-          <div class="pad-div">
+          </div>  -->
+          <!-- <div class="pad-div">
             <div class="card_data">
               <div class="img-block"><img src="assets/icons/overview/cisco.svg"></div>
               <div class="c-title text-truncate">Cisco Jabber</div>
             </div>
-          </div> 
-          <div class="pad-div">
+          </div>  -->
+          <!-- <div class="pad-div">
             <div class="card_data">
               <div class="img-block"><img src="assets/icons/overview/slack.svg"></div>
               <div class="c-title text-truncate">webex</div>
             </div>
-          </div> 
-          <div class="pad-div">
+          </div>  -->
+          <!-- <div class="pad-div">
             <div class="card_data">
               <div class="img-block"><img src="assets/icons/overview/webex.svg"></div>
               <div class="c-title text-truncate">webex</div>
             </div>
-          </div>                    
+          </div>                     -->
          </div>
          <div class="create_new_link">View all</div>
         </div>       
